[tool.poetry]
name = "streamlit-agent"
version = "0.1.0"
description = ""
authors = ["Tim Conkling <tconkling@gmail.com>", "Joshua Carroll <joshua.carroll@snowflake.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "streamlit_agent"}]

[tool.poetry.dependencies]
python = "^3.10"
regex = "^2023.6.3"
langchain = "0.0.238"
streamlit = ">=1.24.0"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
arxiv = "^1.4.7"
pandas = "^2.0.3"
beautifulsoup4 = "^4.12.2"
python-dateutil = "^2.8.2"
lxml = "^4.9.3"
zep-python="^0.33"
promptlayer="^0.1.92"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
